--- a/eda.ipynb
+++ b/eda.ipynb
@@ -55,43 +55,12 @@
    "source": [
     "# drop nulls\n",
     "en = drop_full_nulls(en)\n",
-    "en = try_drop_shared_nulls(en, any_null=True)\n",
-    "\n",
+    "en = en.interpolate(method=\"linear\")\n",
     "# drop features with only zero values\n",
     "en = drop_full_zero(en)\n",
-    "\n",
     "# recap\n",
     "desc = en.describe()\n",
     "display(desc)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "896cdb3f",
-   "metadata": {},
-   "source": [
-    "### normalization"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fb523b4c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display(inspect_std_iqr(en))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51401126",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "en_norm = normalize(en)\n",
-    "en_norm.boxplot(figsize=(15, 5), rot=90)"
    ]
   },
   {
@@ -105,20 +74,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b31ad9ab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = en_norm.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "11f4ff6e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = en.copy()\n",
     "corr = df[df.columns[~df.columns.isin([\"datetime\"])]].corr()\n",
     "sns.heatmap(\n",
     "    corr,\n",
@@ -160,17 +120,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "444da4a3",
+   "metadata": {},
+   "source": [
+    "### seasonality/periodicity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57685bdd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7a83854",
+   "metadata": {},
+   "source": [
+    "### normalization"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "58b5584f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "display(inspect_std_iqr(en))\n",
+    "\n",
+    "en_norm = normalize(en)\n",
+    "en_norm.boxplot(figsize=(15, 5), rot=90)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "timeseries",
+   "display_name": ".ts",
    "language": "python",
    "name": "python3"
   },
@@ -184,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
