--- a/prepare_data.ipynb
+++ b/prepare_data.ipynb
@@ -19,14 +19,13 @@
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "from src.utils import inspect_nulls\n",
+    "from src.utils import inspect_nulls, pop_datetime\n",
     "from src.preprocessing import (\n",
     "    to_datetime,\n",
     "    drop_full_nulls,\n",
     "    try_drop_shared_nulls,\n",
     "    drop_full_zero,\n",
     "    normalize,\n",
-    "    interpolate\n",
     ")\n",
     "\n",
     "with open(\"data/energy_dataset.csv\") as file:\n",
@@ -41,36 +40,41 @@
     "\n",
     "# nulls imputation\n",
     "en = drop_full_nulls(en)\n",
-    "en = interpolate(en, method=\"time\")\n",
-    "#en = try_drop_shared_nulls(en, any_null=True)\n",
-    "\n",
-    "# normalization\n",
-    "en_norm = normalize(en)\n",
+    "if en.datetime.diff().dt.total_seconds().value_counts().shape[0] == 1:\n",
+    "    en = en.interpolate(method=\"linear\")\n",
+    "else:\n",
+    "    display(\"timestamps not evenly interpolate... chto delat?\")\n",
+    "    #en = try_drop_shared_nulls(en, any_null=True)\n",
     "\n",
     "# datetime as index\n",
-    "#en_norm.set_index(keys=\"datetime\", inplace=True)"
+    "#en_norm.set_index(keys=\"datetime\", inplace=True)\n",
+    "\n",
+    "display(inspect_nulls(en))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72399c5b",
+   "metadata": {},
+   "source": [
+    "### train/test splitting\n",
+    "at this stage:\n",
+    "* train/test only, w/o validation subset\n",
+    "* next contains previous training subset XOR non-overlapping subsets\n",
+    "* 80-20 ratio "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7485a5a2",
+   "id": "540597b8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"data/energy_dataset.csv\") as file:\n",
-    "    en = pd.read_csv(file, sep=\",\")\n",
-    "    en.name = \"energy\"\n",
-    "\n",
-    "# create datetime column\n",
-    "en = to_datetime(en, \"time\")\n",
-    "\n",
-    "en = en.set_index(keys=\"datetime\")\n",
-    "datetime = en.index.to_series()\n",
-    "display(datetime)\n",
-    "en.reset_index(inplace=True)\n",
-    "en[\"datetime\"] = datetime\n",
-    "en"
+    "train_test_split_ratio = 0.8\n",
+    "train_en = en[:round(en.shape[0]*train_test_split_ratio)]\n",
+    "test_en = en[round(en.shape[0]*train_test_split_ratio):]\n",
+    "display(train_en.shape, test_en.shape)"
    ]
   },
   {
@@ -78,46 +82,65 @@
    "id": "101d372d",
    "metadata": {},
    "source": [
-    "## prepare dataset"
+    "### batch and target"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9a4e2be",
+   "id": "481fb393",
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature = [\"datetime\", \"total load actual\"]\n",
-    "df = en_norm[feature]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fb227e12",
-   "metadata": {},
-   "source": [
-    "### timestamp spacing"
+    "features = [\"total load actual\"]\n",
+    "df = normalize(train_en[features])\n",
+    "df.describe()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7874ecdc",
+   "id": "23d4c3e8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(df.datetime.diff().dt.total_seconds().value_counts())\n",
-    "\n",
-    "plt.plot(df.datetime.diff().dt.total_seconds()/3600, '-*')\n",
-    "plt.ylabel(\"hours\")\n",
-    "plt.show()"
+    "n_batches = 100\n",
+    "window = df.shape[0] // n_batches\n",
+    "batch_arrays = {key: None for key in df.columns}\n",
+    "batch_targets = {key: None for key in df.columns}\n",
+    "for feature in df.columns:\n",
+    "    arr = df[feature].to_numpy()\n",
+    "    batch_arrays[feature] = {\n",
+    "        batch_idx: arr[batch_idx * window : (batch_idx + 1) * window]\n",
+    "        for batch_idx in range(n_batches)\n",
+    "    }\n",
+    "    batch_targets[feature] = {batch_idx: arr[(batch_idx + 1) * window]\n",
+    "        for batch_idx in range(n_batches)\n",
+    "    }\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b76a7440",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_targets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5b469ea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "timeseries",
+   "display_name": ".ts",
    "language": "python",
    "name": "python3"
   },
@@ -131,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
