--- a/prepare_data.ipynb
+++ b/prepare_data.ipynb
@@ -104,19 +104,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_batches = 100\n",
-    "window = df.shape[0] // n_batches\n",
-    "batch_arrays = {key: None for key in df.columns}\n",
+    "observations = 200\n",
+    "offset = 0\n",
+    "targets = 3\n",
+    "\n",
+    "n_batches = df.shape[0] // (observations + offset + targets)\n",
+    "samples_to_drop = df.shape[0] % (observations + offset + targets)\n",
+    "batch_observations = {key: None for key in df.columns}\n",
     "batch_targets = {key: None for key in df.columns}\n",
     "for feature in df.columns:\n",
     "    arr = df[feature].to_numpy()\n",
-    "    batch_arrays[feature] = {\n",
-    "        batch_idx: arr[batch_idx * window : (batch_idx + 1) * window]\n",
+    "    arr = arr[samples_to_drop:]\n",
+    "    batch_observations[feature] = {\n",
+    "        batch_idx: arr[\n",
+    "            batch_idx\n",
+    "            * (observations + offset + targets) : (batch_idx + 1)\n",
+    "            * observations\n",
+    "            + batch_idx * (offset + targets)\n",
+    "            - 1\n",
+    "        ]\n",
     "        for batch_idx in range(n_batches)\n",
     "    }\n",
-    "    batch_targets[feature] = {batch_idx: arr[(batch_idx + 1) * window]\n",
+    "    batch_targets[feature] = {\n",
+    "        batch_idx: arr[\n",
+    "            (batch_idx + 1) * (observations + offset)\n",
+    "            + batch_idx\n",
+    "            * targets : (batch_idx + 1)\n",
+    "            * (observations + offset + targets)\n",
+    "            - 1\n",
+    "        ]\n",
     "        for batch_idx in range(n_batches)\n",
-    "    }\n"
+    "    }"
    ]
   },
   {
