--- a/prepare_data.ipynb
+++ b/prepare_data.ipynb
@@ -10,10 +10,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "672f591f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime                                       0.0\n",
+       "generation biomass                             0.0\n",
+       "generation fossil brown coal/lignite           0.0\n",
+       "generation fossil coal-derived gas             0.0\n",
+       "generation fossil gas                          0.0\n",
+       "generation fossil hard coal                    0.0\n",
+       "generation fossil oil                          0.0\n",
+       "generation fossil oil shale                    0.0\n",
+       "generation fossil peat                         0.0\n",
+       "generation geothermal                          0.0\n",
+       "generation hydro pumped storage consumption    0.0\n",
+       "generation hydro run-of-river and poundage     0.0\n",
+       "generation hydro water reservoir               0.0\n",
+       "generation marine                              0.0\n",
+       "generation nuclear                             0.0\n",
+       "generation other                               0.0\n",
+       "generation other renewable                     0.0\n",
+       "generation solar                               0.0\n",
+       "generation waste                               0.0\n",
+       "generation wind offshore                       0.0\n",
+       "generation wind onshore                        0.0\n",
+       "forecast solar day ahead                       0.0\n",
+       "forecast wind onshore day ahead                0.0\n",
+       "total load forecast                            0.0\n",
+       "total load actual                              0.0\n",
+       "price day ahead                                0.0\n",
+       "price actual                                   0.0\n",
+       "dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -25,8 +62,8 @@
     "    drop_full_nulls,\n",
     "    try_drop_shared_nulls,\n",
     "    drop_full_zero,\n",
-    "    normalize,\n",
     ")\n",
+    "from src.preparation import train_test_split, make_batches, make_sequences\n",
     "\n",
     "with open(\"data/energy_dataset.csv\") as file:\n",
     "    en = pd.read_csv(file, sep=\",\")\n",
@@ -66,15 +103,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "540597b8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train size: (28051, 27) test size: (7013, 27)\n"
+     ]
+    }
+   ],
    "source": [
     "train_test_split_ratio = 0.8\n",
-    "train_en = en[:round(en.shape[0]*train_test_split_ratio)]\n",
-    "test_en = en[round(en.shape[0]*train_test_split_ratio):]\n",
-    "display(train_en.shape, test_en.shape)"
+    "train_en, test_en = train_test_split(en, 0.8, normalise=True)"
    ]
   },
   {
@@ -82,75 +125,64 @@
    "id": "101d372d",
    "metadata": {},
    "source": [
-    "### batch and target"
+    "### batches"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "481fb393",
+   "execution_count": 13,
+   "id": "72e3d281",
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = [\"total load actual\"]\n",
-    "df = normalize(train_en[features])\n",
-    "df.describe()"
+    "features = [\"total load actual\", \"price actual\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "23d4c3e8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To have uniform sequences, indexes dropped: [0:74]\n",
+      "Number of sequences: 277\n"
+     ]
+    }
+   ],
    "source": [
-    "observations = 200\n",
-    "offset = 0\n",
-    "targets = 3\n",
+    "# | samples_to_drop | observations | offset | targets | observations | offset | targets | ...\n",
+    "#                    <----------sequence 1-----------> <-----------sequence 2----------> ...\n",
     "\n",
-    "n_batches = df.shape[0] // (observations + offset + targets)\n",
-    "samples_to_drop = df.shape[0] % (observations + offset + targets)\n",
-    "batch_observations = {key: None for key in df.columns}\n",
-    "batch_targets = {key: None for key in df.columns}\n",
-    "for feature in df.columns:\n",
-    "    arr = df[feature].to_numpy()\n",
-    "    arr = arr[samples_to_drop:]\n",
-    "    batch_observations[feature] = {\n",
-    "        batch_idx: arr[\n",
-    "            batch_idx\n",
-    "            * (observations + offset + targets) : (batch_idx + 1)\n",
-    "            * observations\n",
-    "            + batch_idx * (offset + targets)\n",
-    "            - 1\n",
-    "        ]\n",
-    "        for batch_idx in range(n_batches)\n",
-    "    }\n",
-    "    batch_targets[feature] = {\n",
-    "        batch_idx: arr[\n",
-    "            (batch_idx + 1) * (observations + offset)\n",
-    "            + batch_idx\n",
-    "            * targets : (batch_idx + 1)\n",
-    "            * (observations + offset + targets)\n",
-    "            - 1\n",
-    "        ]\n",
-    "        for batch_idx in range(n_batches)\n",
-    "    }"
+    "observations = 100\n",
+    "offset = 0\n",
+    "targets = 1\n",
+    "sequences_observations, sequences_targets = make_sequences(\n",
+    "    train_en[features], observations=100, offset=0, targets=1\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b76a7440",
+   "id": "e2907030",
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_targets"
+    "# | sequence 1 | sequence 2 | sequence 3 | sequence 4 | ...\n",
+    "#  <-------------- batch 1 -------------> <------- batch 2 ----   \n",
+    "\n",
+    "batches_observations = make_batches(sequences_observations, n_sequences_per_batch=3)\n",
+    "batches_targets = make_batches(sequences_targets, n_sequences_per_batch=3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5b469ea",
+   "id": "a5af108d",
    "metadata": {},
    "outputs": [],
    "source": []
